--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,6 @@ services:
     restart: always
     ports:
       - "27017:27017"
-    # environment:
-    #   - MONGO_INITDB_ROOT_USERNAME: "root"
-    #   - MONGO_INITDB_ROOT_PASSWORD: "example"
+    environment:
+      - MONGO_INITDB_ROOT_USERNAME:aditya
+      - MONGO_INITDB_ROOT_PASSWORD:aditya23
